fix text tag overflow

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,7 @@ article.card-image {
 article.card-image>footer {
     margin: 0;
 }
+
+.tag-name {
+    margin-bottom: 1.5rem;
+}
